# CS356

./: .gitignore  Makefile  README.md  config_map.json  docker-compose.yml  package-lock.json
.github/: CODEOWNERS
experiment_management/: Dockerfile  docker-compose.yml  experiments.py  requirements.txt
experiment_management/queue_setup/: publisher.py
experiment_management/routes/: experiments.py
experiment_management/services/: experiment_service.py  results_portal.py
experiment_management/storage/: db.py  experiment_group_model.py  experiment_model.py  experiment_run_model.py  experiment_store.py  results_store.py
experiment_management/utils/: encoding.py  (+1 more)
experiments_engine/: Dockerfile  pyproject.toml  requirements.txt
infra_management/: .dockerignore  Dockerfile  infra_management.py  pyproject.toml  requirements.txt  test_infra_management.py
infra_management/models/: api_models.py  sql_models.py
infra_management/src/infra_management/: __main__.py  config.yaml  infra_management.py
infra_management/src/infra_management/models/: api_models.py  sql_models.py
infra_management/src/infra_management/sql/: ddl.sql
infra_management/src/infra_management/util/: data_init.py  engine.py  util.py
infra_management/util/: data_init.py  engine.py  util.py
infrastructure_management/: package-lock.json
results_management/: Dockerfile  requirements.txt  results.py
ssh/: id_rsa  id_rsa.pub
user_management/: DOCKER_README.md  Dockerfile  db.env  docker-compose.engine.yml  docker-compose.yml  requirements.txt  user.properties
web/: Dockerfile
(+192 files in other folders)
